# dollar2math

./: .gitignore  CMakeLists.txt  README.md  dollar2math.cpp  test.tex
